Remove OSM2World installation from Dockerfile